# FileVault

./: .gitignore  CMakeLists.txt  Makefile  README.md  script.py
.github/workflows/: cmake-multi-platform.yml
include/: Cryption.hpp  Env.hpp  IO.hpp  ProcessManagement.hpp  Task.hpp
src/: Cryption.cpp  Env.cpp  IO.cpp  ProcessManagement.cpp  Task.cpp  main.cpp
